# management

./: .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  biome.json  buf.gen.yaml  justfile  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: CI.yml  chores.yml  conventional-commits.yml
backend/: .gitignore  app.py  models.py  pyproject.toml  seed_database.py
backend/instance/: ghost_kitchen.db
crates/cli/: Cargo.toml
crates/cli/assets/: index.html
crates/cli/assets/assets/: index-CRGFtISK.js
crates/cli/src/: error.rs  init.rs  main.rs  run.rs  server.rs  telemetry.rs
crates/cli/templates/base/sites/: amsterdam.json
crates/server/: Cargo.toml  README.md
crates/server/assets/assets/: index-DEBkBJaH.css
crates/server/src/: lib.rs  main.rs
crates/universe/: Cargo.toml
crates/universe/src/: error.rs  idents.rs  init.rs  lib.rs  main.rs  positions.rs  python.rs  templates.rs  test_utils.rs
crates/universe/src/agents/: customer.rs  kitchen.rs  kitchen_next.rs  kitchen_tests.rs  location.rs  mod.rs  population.rs  site.rs
crates/universe/src/agents/functions/: create_order.rs  mod.rs
crates/universe/src/builders/: mod.rs  state_orders.rs  state_population.rs
crates/universe/src/context/: memory.rs  mod.rs  storage.rs
crates/universe/src/context/builders/: mod.rs  state_orders.rs
crates/universe/src/context/schemas/: snapshots.rs  system.rs
crates/universe/src/functions/: h3.rs  mod.rs  uuid_v7.rs
crates/universe/src/models/: mod.rs
crates/universe/src/simulation/: builder.rs  context.rs  events.rs  execution.rs  mod.rs  next.rs  population_event_schemas.rs  schemas.rs  session.rs  state.rs  stats.rs
crates/universe/src/simulation/context/: results.rs  snapshots.rs  system.rs
crates/universe/src/simulation/state/: mod.rs  movement.rs  objects.rs  parse.rs  population.rs  vendors.rs
crates/universe/src/simulation/state/objects/: mod.rs
crates/universe/src/simulation/state/orders/: builder.rs  mod.rs
crates/universe/src/simulation/state/population/: builder.rs  mod.rs
crates/universe/src/state/: mod.rs  movement.rs  movement_next.rs  population.rs
crates/universe/src/state/objects/: builder.rs  mod.rs
crates/universe/src/state/orders/: builder.rs  mod.rs
crates/universe/src/state/population/: builder.rs  mod.rs
data/: .gitignore  README.md  Zip_Codes.geojson  state.json
data/menus/: asian.json  fast_food.json  mexican.json
data/recipes/: asian.json  mexican.json
data/sites/: amsterdam.json  london.json
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: getting-started.mdx
docs/src/content/docs/reference/: data.md  execution.md  journeys.md
docs/src/content/docs/tutorials/: getting-started.mdx  visualizing-results.mdx
examples/: plot_trip.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  NavBar.js  api.js  index.css  index.js
frontend/src/components/: EditModal.js  Modal.js  PageHeader.js  Table.js
frontend/src/pages/: BrandsPage.js  KitchensPage.js  LocationsPage.js  MenusPage.js  VendorsPage.js
notebooks/: explore.ipynb  explore.py  mem.py  prepare.ipynb  prepare.py  simpy_generator.ipynb  simpy_generator.py
notebooks/cache/: .gitignore
prompts/: caspers.md  recipes.md
proto/: buf.yaml
proto/caspers/core/v1/: models.proto  svc.proto
proto/caspers/messages/v1/: events.proto  models.proto
proto/caspers/universe/v1/: models.proto  svc.proto
proto/caspers/vendors/v1/: models.proto  svc.proto
python/: Cargo.toml  README.md  pyproject.toml
python/caspers_universe/: __init__.py  _internal.pyi  prepare.py
python/caspers_universe/plots/: __init__.py
python/src/: error.rs  lib.rs
ui/: README.md  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx
ui/src/components/: BrandPerformanceTable.tsx  ControlPanel.tsx  EventStreamPanel.tsx  MetricsPanel.tsx  SimulationParametersPanel.tsx
ui/src/types/: simulation.ts
