[workspace]
resolver = "2"
members = ["crates/*", "python/"]

[workspace.dependencies]
async-trait = { version = "0.1.83" }
bytes = { version = "1.1" }
chrono = { version = "^0.4.40", features = ["serde"] }
itertools = { version = "0.14.0" }
pbjson = { version = "0.7" }
pbjson-types = { version = "0.7" }
prost = { version = "0.13.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2" }
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.5.2", features = [
  "serde",
  "std",
], default-features = false }
uuid = { version = "1", features = ["serde"] }

# arrow
arrow = { version = "56" }
arrow-arith = { version = "56" }
arrow-array = { version = "56", features = ["chrono-tz"] }
arrow-buffer = { version = "56" }
arrow-cast = { version = "56" }
arrow-ipc = { version = "56" }
arrow-json = { version = "56" }
arrow-ord = { version = "56" }
arrow-row = { version = "56" }
arrow-schema = { version = "56" }
arrow-select = { version = "56" }
object_store = { version = "0.12.3" }
parquet = { version = "56" }

# datafusion
# datafusion = "49"
datafusion = { git = "https://github.com/apache/datafusion", rev = "fa1f8c192dd531d3f2fca61885eafa3e9002f0dd" }
# datafusion-expr = "49"
# datafusion-common = "49"
# datafusion-execution = "49"
# datafusion-ffi = "49"
# datafusion-functions = "49"
# datafusion-functions-aggregate = "49"
# datafusion-physical-expr = "49"
# datafusion-physical-plan = "49"
# datafusion-proto = "49"
# datafusion-sql = "49"

geoarrow = { version = "0.5.0" }
geoarrow-array = { version = "0.5.0" }
geoparquet = { version = "0.5.0" }
geoarrow-schema = { version = "0.5.0" }
