[project]
name = "management"
version = "0.1.0"
description = ""
authors = [
    {name = "nkarpov",email = "nick@nickkarpov.com"}
]
requires-python = ">=3.11"
dependencies = [
    "Flask==2.3.2",
    "Flask-CORS==3.0.10",
    "Flask-SQLAlchemy==3.0.5",
    "psycopg2-binary==2.9.6",
    # "Flask-Migrate==4.0.4" # Optional for database migrations
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
