[package]
name = "caspers-universe-python"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "caspers_universe"
crate-type = ["cdylib"]

[dependencies]
caspers-universe = { path = "../crates/universe/", features = ["python"] }

pyo3 = "0.25.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
