[package]
name = "caspers-universe-python"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
readme = "README.md"
license = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "caspers_universe"
crate-type = ["cdylib"]

[dependencies]
caspers-universe = { path = "../crates/universe/", features = ["python"] }

arrow = { workspace = true }
datafusion = { workspace = true }
object_store = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

pyo3 = "0.26.0"
# pyo3-arrow = "0.12"
tokio = { version = "1", features = ["rt-multi-thread"] }
