[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "caspers-universe"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "folium>=0.20.0",
    "geoarrow-pyarrow>=0.1.2",
    "geoarrow-rust-core>=0.3.0",
    "geoarrow-rust-io>=0.3.0",
    "h3>=4.2.2",
    "networkx>=3.4.2",
    "osmnx>=2.0.2",
    "pint>=0.25",
    "pyarrow>=19.0.1",
    "shapely>=2.1.0",
]

[tool.maturin]
module-name = "caspers_universe._internal"
features = ["pyo3/extension-module"]
