[package]
name = "capers-universe-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8"
tokio = { workspace = true }
# tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# serde = { workspace = true }
serde_json = { workspace = true }
