[package]
name = "caspers-universe"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "v7", "v5"] }

counter = { version = "0.6.0" }
dashmap = { version = "6" }
futures = { version = "0.3" }
rand = { version = "0.9", features = ["std", "std_rng"] }
h3o = { version = "0.8.0", features = ["geo"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

arrow-arith = { workspace = true }
arrow-array = { workspace = true, features = ["chrono-tz"] }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true }
arrow-ipc = { workspace = true }
arrow-json = { workspace = true }
arrow-ord = { workspace = true }
arrow-row = { workspace = true }
arrow-schema = { workspace = true, features = [
    "serde",
    "canonical_extension_types",
] }
arrow-select = { workspace = true }

datafusion = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-common = { workspace = true }
datafusion-proto = { workspace = true }
datafusion-sql = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-functions = { workspace = true }
datafusion-functions-aggregate = { workspace = true }
geoarrow = { workspace = true }
geoarrow-geoparquet = { workspace = true }
geoarrow-schema = { workspace = true }
clap = { version = "4.5.37", features = ["derive"] }
tabled = { version = "0.19.0", features = ["std"] }
geo = { version = "0.30", features = ["serde"] }
geo-types = { version = "*", features = ["serde"] }
fake = { version = "4", features = ["derive"] }
indexmap = { version = "2.9.0" }
geo-traits = "0.2"
strum = { version = "0.27", features = ["derive"] }
fast_paths = "1.0.0"
bincode = { version = "2", features = ["serde"] }

[dev-dependencies]
approx = "0.5.1"
arrow = { workspace = true }
test-log = "0.2.17"
