[package]
name = "caspers-universe"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "v7", "v5"] }

counter = { version = "0.6.0" }
dashmap = { version = "6" }
futures = { version = "0.3" }
rand = { version = "0.9", features = ["std", "std_rng"] }
h3o = { version = "0.8.0", features = ["geo"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

arrow = { workspace = true }
arrow-arith = { workspace = true }
arrow-array = { workspace = true, features = ["chrono-tz"] }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true }
arrow-ipc = { workspace = true }
arrow-json = { workspace = true }
arrow-ord = { workspace = true }
arrow-row = { workspace = true }
arrow-schema = { workspace = true, features = [
  "serde",
  "canonical_extension_types",
] }
arrow-select = { workspace = true }
datafusion = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
geoarrow = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-schema = { workspace = true }
geoparquet = { workspace = true }

clap = { version = "4.5.37", features = ["derive"] }
tabled = { version = "0.19.0", features = ["std"] }
geo = { version = "0.30", features = ["serde"] }
geo-traits = "0.3"
geo-types = { version = "0.7.16", features = ["serde"] }
fake = { version = "4", features = ["derive"] }
indexmap = { version = "2.9.0" }
strum = { version = "0.27", features = ["derive"] }
fast_paths = "1.0.0"
bincode = { version = "2", features = ["serde"] }

pyo3 = { version = "0.25", optional = true }

[dev-dependencies]
approx = "0.5.1"
arrow = { workspace = true }
test-log = "0.2.17"

[features]
default = []
python = ["pyo3"]
